--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "element-ui": "^1.3.4",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.3",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
