--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "buefy": "^0.4.5",
+    "bulma": "^0.4.3",
     "element-ui": "^1.3.4",
     "vue": "^2.2.6",
     "vue-resource": "^1.3.3",
